# Bot

./: .gitignore  Dockerfile  README.md  config.json  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  update.sh
Modules/: __init__.py  browser.py  calender.py  ctf.py  ctfd.py  registry.py  role_manager.py  test.py
bot/: config.json  main.py
bot/cogs/: admin.py  browser.py  cal_events.py  calendar.py  ctf_events.py  ctfd.py  events.py  pwncrates.py  sync.py
bot/cogs/common/: base_events.py  handler.py
