[tool.poetry]
name = "bot"
version = "2.1.0"
description = "The official StudSec bot written in Python"
license = "GPL-3.0-only"
authors = [
    "Robert Klink <roberthklink@gmail.com>",
    "Aidan <aidands@protonmail.com>",
]

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.3.2"
python-dotenv = "^1.0.1"
termcolor = "^2.5.0"
selenium = "^4.27.1"
urllib3 = "2.2.3"
asyncio = "^3.4.3"
requests = "^2.31.0"
datetime = "^5.4"
icalendar = "^6.1.0"
recurring-ical-events = "^3.3.3"
markdownify = "^0.14.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.1"

[tool.poetry.scripts]
bot = "bot.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
