[tool.poetry]
name = "bot"
version = "2.2.0"
description = "The official StudSec bot written in Python"
license = "GPL-3.0-only"
authors = [
    "Robert Klink <roberthklink@gmail.com>",
    "Aidan <aidands@protonmail.com>",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
"discord.py" = "^2.3.2"
python-dotenv = "^1.0.1"
termcolor = "^2.4.0"
selenium = "^3.141.0"
urllib3 = "2.3.0"
asyncio = "^3.4.3"
requests = "^2.31.0"
datetime = "^5.4"
icalendar = "^6.1.0"
recurring-ical-events = "3.4.1"
markdownify = "^0.14.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.0.3"
mypy = "^1.15.0"
types-selenium = "^3.141.9"

[tool.poetry.scripts]
bot = "bot.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
